--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,5 @@ ACCESSTOKEN_REDIS_PORT = 6379
 ACCESSTOKEN_REDIS_DATABASE = 0
 ACCESSTOKEN_REDIS_PASSWORD =abc123
 
-
-
+#微信appid（公众号，小程序）对应的密钥，格式： THIRD_APPID_appid值=密钥
+THIRD_APPID_xxx=yyy
